Alignment fix.

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+nav{
+	width: 100vh;
+}
+
 .fullscreen {
 	width: 100%;
 	height: 100vh;
@@ -33,5 +37,13 @@ footer {
 }
 
 body {
+	background-color: rgb(220, 220, 220);
+	font-family: "Raleway", sans-serif;
+	height: 100%;
+}
+
+
+
+.jumbotron{
 	background-color: rgb(220, 220, 220);
 }
